<resources>
    <string name="app_name">Resume Builder</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="date">Date of birth</string>
    <string name="street">Street</string>
    <string name="district">District</string>
    <string name="school_name">School Name</string>
    <string name="year_of_passing">Year of passing</string>
    <string name="percentage">Percentage</string>
    <string name="college_name">College Name</string>
    <string name="tenth">X</string>
    <string name="twelth">XII</string>
    <string name="college_university">College/University</string>
    <string name="skill_1">Skill 1</string>
    <string name="skill_2">Skill 2</string>
    <string name="skill_3">Skill 3</string>
    <string name="skill_4">Skill 4</string>
    <string name="name">Name</string>
    <string name="career_objective">Career Objective:"\n" To secure a position with a stable and profitable organization, where I can be a member of a team and utilize my business experience to the fullest.</string>
    <string name="school_college">School/College</string>
    <string name="skills">Skills</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="texterror">Enter a valid text</string>
    <string name="dateString">Date:</string>
    <string name="signature">Signature</string>
    <string name="education_qualification">Education Qualification</string>
    <string name="skill_set">Skill Set</string>
</resources>
