<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/skill1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/skill_1"/>

    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skill1"
        android:layout_alignLeft="@+id/skill1"
        android:layout_alignStart="@+id/skill1" />
    <EditText
        android:id="@+id/skill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/skill_2"
        android:layout_below="@+id/ratingBar1"
        android:layout_alignLeft="@+id/ratingBar1"
        android:layout_alignStart="@+id/ratingBar1" />

    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skill2"
        android:layout_alignLeft="@+id/skill2"
        android:layout_alignStart="@+id/skill2" />
    <EditText
        android:id="@+id/skill3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/skill_3"
        android:layout_below="@+id/ratingBar2"
        android:layout_alignLeft="@+id/ratingBar2"
        android:layout_alignStart="@+id/ratingBar2" />

    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skill3"
        android:layout_alignLeft="@+id/skill3"
        android:layout_alignStart="@+id/skill3" />
    <EditText
        android:id="@+id/skill4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/skill_4"
        android:layout_below="@+id/ratingBar3"
        android:layout_alignLeft="@+id/ratingBar3"
        android:layout_alignStart="@+id/ratingBar3" />

    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/ratingBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skill4"
        android:layout_alignLeft="@+id/skill4"
        android:layout_alignStart="@+id/skill4" />

    <Button
        android:id="@+id/btn_next3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
    </ScrollView>