<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/firstName"
            android:layout_toRightOf="@+id/firstName"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/firstName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toEndOf="@+id/firstName"
                android:layout_toRightOf="@+id/firstName"
                android:hint="@string/last_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/firstName"
            android:layout_marginTop="19dp"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginTop="25dp"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/date"
            android:layout_marginTop="18dp"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/input_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/street"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/street"
            android:layout_marginTop="14dp"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/input_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/district"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/district"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/CardView.Dark">

            <EditText
                android:id="@+id/input_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="Pincode"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:layout_below="@+id/pincode"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>