<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/tenth"
            android:textSize="25sp"
            android:textColorHint="@color/colorPrimary"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenth_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:hint="@string/school_name"
            app:hintTextAppearance="@style/CardView.Dark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTenthSchoolName"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="14dp"
                 />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenth_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tenth_school"
            android:hint="@string/year_of_passing"
            app:hintTextAppearance="@style/CardView.Dark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTenthYear"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="14dp"
                android:inputType="date"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenth_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tenth_year"
            android:hint="@string/percentage"
            app:hintTextAppearance="@style/CardView.Dark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTenthPercentage"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="14dp"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/twelth"
            android:textSize="25sp"
            android:textColorHint="@color/colorPrimary"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/twelth_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/school_name"
            app:hintTextAppearance="@style/CardView.Dark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputTwelthSchoolName"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/twelth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tenth_school"
        android:hint="@string/year_of_passing"
        app:hintTextAppearance="@style/CardView.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputTwelthYear"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="14dp"
            android:inputType="date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/twelth_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tenth_year"
        android:hint="@string/percentage"
        app:hintTextAppearance="@style/CardView.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputTwelthPercentage"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="14dp"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>





    <TextView
        android:id="@+id/textViewCollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/college_university"
        android:textSize="25sp"
        android:textColorHint="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:hintTextAppearance="@style/CardView.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCollegeName"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/college_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/college_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tenth_school"
        app:hintTextAppearance="@style/CardView.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCollegeYear"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="14dp"
            android:hint="@string/year_of_passing"
            android:inputType="date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/college_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tenth_year"
        app:hintTextAppearance="@style/CardView.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCollegePercentage"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="14dp"
            android:hint="@string/percentage"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_next2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</ScrollView>